Fixed a problem where the submit button was not properly aligned with the form

--- a/static/css/base/forms.css
+++ b/static/css/base/forms.css
@@ -47,7 +47,7 @@
     font-size: 20px;
 }
 
-.form-container form .form-input .submit {
-    width: 50%;
-    font-size: 20px;
+.form-container form #submit {
+    display: flex;
+    justify-content: center;
 }
